--- a/static/css/style.css
+++ b/static/css/style.css
@@ -16,3 +16,10 @@ body {
     height: 100px;
     font-size: 45px;
   }
+
+  .next-btns{
+    background-color: #de8005;
+    color: black;
+    width: 120px;
+    font-size: 40px;
+  }
