--- a/static/css/style.css
+++ b/static/css/style.css
@@ -18,7 +18,7 @@ body {
   }
 
   .next-btns{
-    background-color: #de8005;
+    background-color: #d3f6f7;
     color: black;
     width: 120px;
     font-size: 40px;
